# abstract-inheritance-minimal-example

./: CMakeLists.txt  abstract_base_class.F90  abstract_derived_class.F90  main.F90  test_class.F90  test_derived_class.F90
src/: class_A.F90  class_B.F90  class_BCD.F90  class_C.F90  class_D.F90  file_class.F90  global_out.F90  kinds.F90  parameters.F90  program.F90  submodule_class_A.F90  submodule_class_A_interface.F90
